--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ EMAIL_USER=sureshnayak6281@gmail.com
 EMAIL_PASS=wqbt dhru bnda qveo
 KEY_ID = rzp_test_Fo5LYnPNJqxQdM
 KEY_SECRET = m2mcOoKWjMp8scjcDdE1NsAP
+COOKIE_DOMAIN = 'https://master--preeminent-empanada-733ca8.netlify.app'
